# cool-ai

./: .gitignore  ANALYSTS.md  README.md  pyproject.toml  run.py  start.sh
.cursor/rules/: fullstack-engineer.mdc
experts/finance/: EXPERT.md
experts/industry/: EXPERT.md
experts/policy/: EXPERT.md
experts/risk/: EXPERT.md
plugins/: __init__.py
plugins/data/: __init__.py  stock.py
plugins/export/: __init__.py
plugins/export/news/: __init__.py  plugin.py
plugins/export/wechat/: __init__.py  plugin.py
plugins/export/xiaohongshu/: __init__.py  plugin.py
plugins/search/: __init__.py
plugins/search/duckduckgo/: __init__.py  plugin.py
plugins/search/tavily/: __init__.py  plugin.py
src/: __init__.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  chain.py  config.py  expert.py  iteration.py  llm.py  plugin.py
src/ui/: __init__.py  app.py
