[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expert-analyst"
version = "0.1.0"
description = "ðŸŽ¯ AI å¤šä¸“å®¶åä½œåˆ†æžç³»ç»Ÿ - è§£å†³ä¿¡æ¯ä¸å¯¹ç§°ï¼Œè¿­ä»£è‡ªè¯æœºåˆ¶"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lucky" }
]
keywords = [
    "ai",
    "analysis", 
    "expert-system",
    "langchain", 
    "ollama",
    "multi-agent",
    "stock-analysis",
    "gradio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "gradio>=5.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
analyst = "src.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
